    resulted in the user being repeatedly presented with the password
    login page because mod_webkdc did not notice the password session
    factor and continue to asking for a multifactor authentication.  The
    logic is still not entirely correct for users who use non-password
    initial authentication factors; that will be fixed in a subsequent
    release.

    mod_webkdc now requires that the return URL in a request token be
    absolute URL and not contain any non-ASCII characters.  The latter
    check avoids error messages and later problems with WebLogin template
    processing.

    Fix the WebLogin replay detection logic to not attempt to trigger
    during password changes, which do not have request tokens.

    Fix logging of mod_webkdc <requestTokenRequest> failures.

    Fix the webauth/webkdc.h header prototype for webauth_user_validate to
    correctly allow the user state parameter to be NULL.

    Log (at the info level) whenever mod_webkdc ignores expired
    webkdc-factor or webkdc-proxy tokens passed to <requestTokenRequest>.

    Correctly diagnose a missing service token in a WebLogin request and
    return the correct error page rather than an internal error.

WebAuth 4.5.3 (2013-05-15)

    SECURITY: Reset all header contents between WebLogin requests, fixing
    problems introduced in WebAuth 4.4.1 when WebLogin began using a
    persistent CGI::Application object with FastCGI.  WebLogin
    installations that used FastCGI and the $REMUSER_REDIRECT setting in
    webkdc.conf could fail with infinite redirect loops or leak security
    information, such as single sign-on cookies, from one authenticated
    user to another.  (CVE-2013-2106)

WebAuth 4.5.2 (2013-05-14)

    WebLogin now supports preserving the remember_login setting on the
    login page after a failed authentication, instead of resetting the
    checkbox to the default.  Taking advantage of this support requires